# secure-messaging

./: .gitignore  Cargo.toml  README.md
contracts/controller/: Cargo.toml
contracts/controller/examples/: schema.rs
contracts/controller/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/messages/: Cargo.toml
contracts/messages/examples/: schema.rs
contracts/messages/src/: contract.rs  error.rs  state.rs
contracts/profiles/: Cargo.toml
contracts/profiles/examples/: schema.rs
contracts/profiles/src/: contract.rs  error.rs  state.rs
