[workspace]
members = [
    "contracts/*",
    "packages/*"
    ]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
authors       = ["Coreum"]
rust-version  = "1.67"

[profile.release.package.controller]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cosmwasm-std    = "1.3.0"
cw-ownable      = "0.5.1"
thiserror       = "1.0.43"
cw-storage-plus = "1.1.0"
schemars        = "0.8.12"
cosmwasm-schema = "1.3.0"
cw2             = "1.1.0"
cw-utils        = "1.0.1"
serde           = { version = "1.0.171", default-features = false, features = ["derive"] }
utils           = { path = "./packages/utils" }
